# njdoe-sync

./: .gitignore  README.md  README.rst  pyproject.toml  requirements.txt
.github/workflows/: codeql-analysis.yml
njdoe_sync/: background-checks.py  background-checks.sh  background_checks.py  certification-history.py
tests/: test_njdoe_sync.py
