[tool.poetry]
name = "njdoe-sync"
version = "0.1.0"
description = ""
authors = ["Charlie Bini <cbini87@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
njdoe = "^0.1.0"
google-cloud-storage = "^1.42.1"
python-dotenv = "^0.19.0"
oauthlib = "^3.1.1"
requests-oauthlib = "^1.3.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
black = "^22.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
